# geo-architect

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.beads/: metadata.json
harness/: config.py  run.py  scenarios.yaml
harness/prompts/: judge.md  querying_agent.md
